--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@mantine/hooks": "^8.3.5",
     "@tanstack/react-table": "^8.21.3",
     "dayjs": "^1.11.18",
+    "html2canvas": "^1.4.1",
     "next": "15.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
