--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/hooks": "^8.3.5",
     "@tanstack/react-table": "^8.21.3",
     "dayjs": "^1.11.18",
+    "gsap": "^3.13.0",
     "html2canvas": "^1.4.1",
     "next": "15.5.6",
     "react": "19.1.0",
